[package]
name = "gcide-parser"
version = "0.1.0"
authors = ["johncf <johncf@protonmail.com>"]

[lib]
name = "gcide"
path = "src/lib.rs"

[[bin]]
name = "identity"
path = "src/bin/identity.rs"
required-features = ["binaries"]

[[bin]]
name = "tohtml"
path = "src/bin/tohtml.rs"
required-features = ["binaries"]

[features]
default = ["binaries"]
binaries = ["structopt"]

[dependencies]
nom = "4.0"
bitflags = "1.0"
unicode-normalization = "0.1"

encoding = { version = "0.2", optional = true }
structopt = { version = "0.2", optional = true }
